<resources>
    <string name="app_name">Snkrs</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">SETTINGS</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="create_account_title">Create your account</string>
    <string name="signin_already_have_an_account">Have an account already?</string>
    <string name="sign_out">Sign Out</string>
    <string name="log_in_to_snkrs">Log in to SNKRS.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="profile">PROFILE</string>
</resources>
