<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="settingsViewModel"
            type="com.skowronsky.snkrs.ui.profile.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.profile.settings.SettingsFragment">

        <TextView
            android:id="@+id/titleSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_settings"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/userTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/username"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleSettings" />

        <EditText
            android:id="@+id/userEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="42dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={settingsViewModel.username}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/userTxt"
            app:layout_constraintTop_toBottomOf="@+id/userTxt" />

        <TextView
            android:id="@+id/emailTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/email"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/userTxt"
            app:layout_constraintTop_toBottomOf="@+id/userEditText" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:text="@={settingsViewModel.email}"
            android:textColor="@color/greyText"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/userEditText"
            app:layout_constraintStart_toStartOf="@+id/userEditText"
            app:layout_constraintTop_toBottomOf="@+id/emailTxt" />

        <TextView
            android:id="@+id/passwordTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/emailTxt"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none|textWebPassword"
            android:text="@={settingsViewModel.password}"
            app:layout_constraintEnd_toEndOf="@+id/emailEditText"
            app:layout_constraintStart_toStartOf="@+id/emailEditText"
            app:layout_constraintTop_toBottomOf="@+id/passwordTxt" />

        <Button
            android:id="@+id/update_btn"
            style="@style/Widget.AppCompat.Button.Colored.RoundedButton"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> settingsViewModel.setEventSave()}"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
            app:layout_constraintStart_toStartOf="@+id/passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <Button
            android:id="@+id/login_btn_login"
            style="@style/Widget.AppCompat.Button.Colored.RoundedButton"
            android:layout_width="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> settingsViewModel.setEventLogout()}"
            android:text="@string/log_out"
            app:layout_constraintEnd_toEndOf="@+id/emailEditText"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/update_btn" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>